appId: ${APP_ID}
tags:
  - util
---
- assertVisible:
    id: 'onboarding-get-started'
- tapOn:
    id: 'onboarding-have-account'
- assertVisible:
    id: 'login-email-input'
