appId: ${APP_ID}
---
- runFlow: ../utils/launch-app.yaml
- assertVisible: 'Everything your app needs, from day one.'
- tapOn:
    id: 'onboarding-have-account'
- assertVisible:
    id: 'login-email-input'
