appId: ${APP_ID}
tags:
  - util
---
- tapOn:
    id: 'login-email-input'
- inputText: ${EMAIL}
- runFlow: hide-keyboard.yaml
- tapOn:
    id: 'login-password-input'
- inputText: ${PASSWORD}
- runFlow: hide-keyboard.yaml
- tapOn:
    id: 'login-submit'
- runFlow: dismiss-password-prompt.yaml
- extendedWaitUntil:
    visible: 'Home'
    timeout: 10000
